syntax = "proto3";
package musigrpc;

service Musig {
  rpc InitTrade (PubKeySharesRequest) returns (PubKeySharesResponse);

  rpc GetNonceShares (NonceSharesRequest) returns (NonceSharesMessage);

  rpc GetPartialSignatures (PartialSignaturesRequest) returns (PartialSignaturesMessage);

  rpc SignDepositTx (DepositTxSignatureRequest) returns (DepositPsbt);

  rpc PublishDepositTx (PublishDepositTxRequest) returns (stream TxConfirmationStatus);

  rpc SubscribeTxConfirmationStatus (SubscribeTxConfirmationStatusRequest) returns (stream TxConfirmationStatus);

  rpc SignSwapTx (SwapTxSignatureRequest) returns (SwapTxSignatureResponse);

  rpc CloseTrade (CloseTradeRequest) returns (CloseTradeResponse);
}

// TODO: Same as 'trade.TradeRole' from Bisq2 protos (minus 'UNSPECIFIED' variant, which should probably be added):
enum Role {
  SELLER_AS_MAKER = 0;
  SELLER_AS_TAKER = 1;
  BUYER_AS_MAKER = 2;
  BUYER_AS_TAKER = 3;
}

message PubKeySharesRequest {
  string tradeId = 1;
  Role myRole = 2;
}

message PubKeySharesResponse {
  bytes buyerOutputPubKeyShare = 1;
  bytes sellerOutputPubKeyShare = 2;
  uint32 currentBlockHeight = 3;
}

message NonceSharesRequest {
  string tradeId = 1;
  bytes buyerOutputPeersPubKeyShare = 2;
  bytes sellerOutputPeersPubKeyShare = 3;
  uint64 depositTxFeeRate = 4;       // sats per kwu
  uint64 preparedTxFeeRate = 5;      // sats per kwu
  uint64 tradeAmount = 6;            // sats
  uint64 buyersSecurityDeposit = 7;  // sats
  uint64 sellersSecurityDeposit = 8; // sats
  ReceiverAddressAndAmount tradeFeeReceiver = 9;
}

message NonceSharesMessage {
  string warningTxFeeBumpAddress = 1;
  string redirectTxFeeBumpAddress = 2;
  string claimTxPayoutAddress = 11;
  bytes halfDepositPsbt = 3;
  uint64 redirectionAmountMsat = 14; // (millisatoshis)
  bytes swapTxInputNonceShare = 4;
  bytes buyersWarningTxBuyerInputNonceShare = 5;
  bytes buyersWarningTxSellerInputNonceShare = 6;
  bytes sellersWarningTxBuyerInputNonceShare = 7;
  bytes sellersWarningTxSellerInputNonceShare = 8;
  bytes buyersRedirectTxInputNonceShare = 9;
  bytes sellersRedirectTxInputNonceShare = 10;
  bytes buyersClaimTxInputNonceShare = 12;
  bytes sellersClaimTxInputNonceShare = 13;
}

message ReceiverAddressAndAmount {
  string address = 1;
  uint64 amount = 2; // sats
}

message PartialSignaturesRequest {
  string tradeId = 1;
  NonceSharesMessage peersNonceShares = 2;
  repeated ReceiverAddressAndAmount redirectionReceivers = 3;
  bool buyerReadyToRelease = 4;
}

message PartialSignaturesMessage {
  bytes peersWarningTxBuyerInputPartialSignature = 1;
  bytes peersWarningTxSellerInputPartialSignature = 2;
  bytes peersRedirectTxInputPartialSignature = 3;
  bytes peersClaimTxInputPartialSignature = 6;
  optional bytes swapTxInputPartialSignature = 4;
  optional bytes swapTxInputSighash = 5;
}

message DepositTxSignatureRequest {
  string tradeId = 1;
  PartialSignaturesMessage peersPartialSignatures = 2;
}

message DepositPsbt {
  bytes depositPsbt = 1;
}

message PublishDepositTxRequest {
  string tradeId = 1;
  DepositPsbt peersDepositPsbt = 2;
}

message SubscribeTxConfirmationStatusRequest {
  string tradeId = 1;
}

message TxConfirmationStatus {
  bytes tx = 1;
  uint32 currentBlockHeight = 2;
  uint32 numConfirmations = 3;
}

message SwapTxSignatureRequest {
  string tradeId = 1;
  bytes swapTxInputPeersPartialSignature = 2;
  bool sellerReadyToRelease = 3;
}

message SwapTxSignatureResponse {
  bytes swapTx = 1;
  bytes peerOutputPrvKeyShare = 2;
}

message CloseTradeRequest {
  string tradeId = 1;
  optional bytes myOutputPeersPrvKeyShare = 2;
  optional bytes swapTx = 3;
}

message CloseTradeResponse {
  bytes peerOutputPrvKeyShare = 1;
}
