syntax = "proto3";
package walletrpc;

service Wallet {
  rpc WalletBalance (WalletBalanceRequest) returns (WalletBalanceResponse);

  rpc NewAddress (NewAddressRequest) returns (NewAddressResponse);

  rpc ListUnspent (ListUnspentRequest) returns (ListUnspentResponse);
}

message WalletBalanceRequest {
}

message WalletBalanceResponse {
  uint64 immature = 1;
  uint64 trustedPending = 2;
  uint64 untrustedPending = 3;
  uint64 confirmed = 4;
}

message NewAddressRequest {
}

message NewAddressResponse {
  string address = 1;
  string derivationPath = 2;
}

message ListUnspentRequest {
}

message ListUnspentResponse {
  repeated TransactionOutput utxos = 1;
}

message TransactionOutput {
  string txId = 1;
  uint32 vout = 2;
  bytes scriptPubKey = 3;
  uint64 value = 4;
}
